using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimString
{
    public static readonly int Check = Animator.StringToHash("Check");
    public static readonly int IsCheckBox = Animator.StringToHash("IsCheckBox");
    public static readonly int IsClear = Animator.StringToHash("IsClear");
    public static readonly int IsStart = Animator.StringToHash("IsStart");
}
